--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,9 +1,9 @@
 - name:
-  link: https://facebook.com/cloudcannon
+  link: https://facebook.com/cplmakerlab
   social_icon: Facebook
   new_window: true
 - name:
-  link: https://twitter.com/cloudcannon
+  link: https://twitter.com/cplmakerlab
   social_icon: Twitter
   new_window: true
 - name:
@@ -11,6 +11,10 @@
   social_icon: YouTube
   new_window: true
 - name: 
-  link: https://instagram.com/
+  link: https://instagram.com/cplmakerlab
   social_icon: Instagram
+  new_window: true
+- name: 
+  link: https://github.com/cplmakerlab
+  social_icon: Github
   new_window: true
