Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
-- name: Learn
+- name: Home
   link: /
+- name: Learn
+  link: /learn/
 - name: Make
   link: /make/
 - name: Community
   link: /community/
-- name: Home
-  link: /
