Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,12 @@ exclude:
   - LICENCE
 
 collections:
-  - how-to
-  - sets
+  how-to:
+    output: true
+    permalink: /:collection/:name
+  sets:
+    output: true
+    permalink: /:collection/:name
 
 
 jekyll-archives:
