Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -28,11 +28,11 @@ timezone: Etc/UTC
 permalink: /:categories/:title/
 
 plugins:
-  - jekyll-extract-element
   - jekyll-sitemap
   - jekyll-seo-tag
   - jekyll-feed
-  - jekyll-archives
+#  - jekyll-extract-element
+#  - jekyll-archives
 
 exclude:
   - Gemfile
