--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -7,7 +7,7 @@
   social_icon: Twitter
   new_window: true
 - name:
-  link: https://youtube.com/c/cloudcannon
+  link: https://youtube.com/c/cplmakerlab
   social_icon: YouTube
   new_window: true
 - name: 
