Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,9 @@
   link: /learn/
 - name: Make
   link: /make/
-- name: Community
-  link: /community/
+  subnav:
+    - name: Community
+      link: /community/
+    - name: Community2
+      link: /community2/
+      
