Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,19 @@
 - name: Home
   link: /
-  subnav:  
 - name: Learn
   link: /learn/
-  subnav:  
+  subnav:
+    - name:
+      link: 
 - name: Make
   link: /make/
   subnav:
+    - name:
+      link:
+- name: Community
+  link: /community/
+  subnav:
+    - name:
+      link:
 
       
