Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,14 @@ exclude:
   - LICENCE
 
 collections:
-- how-to
 - tools
 - software
+  how-to:
+    output: true
+    permalink: /how-to/:path/
+
+
+
 
 
 defaults:
