Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,12 @@ exclude:
   - LICENCE
 
 collections:
-  - equipment
-  - software
-  - guides:
+  - 
+    equipment:
+  - 
+    software:
+  - 
+    guides:
       output: true
       permalink: /guide/:path/
 
