Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ exclude:
   - LICENCE
 
 collections:
-  equipment:
-  software:
+  equipment
+  software
   guides:
     output: true
     permalink: /guide/:path/
