Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -41,11 +41,13 @@ exclude:
   - LICENCE
 
 collections:
-  equipment
-  software
   guides:
     output: true
     permalink: /guide/:path/
+
+collections:
+  - equipment
+  - software
 
 defaults:
   -
