Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,8 +12,8 @@
 - name: Make
   link: /make/
   subnav:
-    - name: Design
-      link: design
+    - name: Software
+      link: software
     - name: Materials
       link: materials
     - name: Equipment
