--- a/_config.yml
+++ b/_config.yml
@@ -31,12 +31,12 @@ plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
   - jekyll-feed
-  - jekyll-extract-element
-  - jekyll-archives
+#  - jekyll-extract-element
+#  - jekyll-archives
 
-
-jekyll-archives:
-  enabled: ['categories']
+# This plugin is not on github :-/
+# jekyll-archives:
+#  enabled: ['categories']
 
 exclude:
   - Gemfile
