--- a/_config.yml
+++ b/_config.yml
@@ -97,13 +97,24 @@ _options:
     format: p h3
     undo: true
     redo: true
+ image_path:
+    width: 90
+    height: 120
+    resize_style: "contain"
+    mime_type: "image/jpeg"
+    expandable: true    
   content:
     format: p h1 h2 h3 h4 h5 h6 pre address div
     bold: true
+    italic: true
     link: true
     numberedlist: true
     code: true
     table: true
     right: align-to-right
     embed: true
+    width: 90
+    height: 120
+    resize_style: "cover"
+    mime_type: "image/png"    
 
