--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Base
+title: Chicago Public Library Maker Lab
 url: "https://orange-ape.cloudvent.net/"
 baseurl:
 google_analytics_key:
@@ -86,30 +86,5 @@ social_icons:
   - RSS
 
 
-_options:
-  some_markdown:
-    bold: true
-    table: true
-    link: true
-  _text:
-    italic: true
-  _block:
-    format: p h3
-    undo: true
-    redo: true
-  content:
-    format: p h1 h2 h3 h4 h5 h6 pre address div
-    bold: true
-    italic: true
-    underline: true
-    link: true
-    image: true
-    numberedlist: true
-    unorderedlist: true
-    code: true
-    table: true
-    left: align-left
-    right: align-right
-    center: align-center
-    embed: true
+
 
