Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,7 @@ _options:
     italic: true
     underline: true
     link: true
+    image:true
     numberedlist: true
     unorderedlist: true
     code: true
