--- a/_config.yml
+++ b/_config.yml
@@ -83,3 +83,19 @@ social_icons:
   - YouTube
   - Email
   - RSS
+  
+_options:
+  content:
+    format: p h1 h2 h3 h4 h5 h6
+    bold: true
+    italic: true
+    removeformat: true
+    link: true
+    image: true
+    blockquote: true
+    numberedlist: true
+    bulletedlist: true
+    code: true
+    table: true
+    right: align-to-right
+    embed: true
