Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -44,10 +44,14 @@ exclude:
   - README.md
   - LICENCE
 
+# Collections are like custom content types.
 collections:
   guides:
     output: true
     permalink: /guide/:path/
+  topics:    
+    output: true
+    permalink: /topic/:path/
 
 
 defaults:
