--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,12 @@ social_icons:
   - Email
   - RSS
   
+type:
+  - document
+  - how-to
+  - video
+
+  
 _options:
   content:
     format: p h1 h2 h3 h4 h5 h6
