--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,20 @@ type:
   - how-to
   - video
 
+_explore:
+  groups:
+    - heading: Pages
+      collections:
+        - pages
+    - heading: How-To Guides
+      collections:
+        - guides        
+    - heading: Blogging
+      collections:
+        - posts
+        - drafts
+
+
 _source_editor:   
   tab_size: 2
   
