--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ timezone: Etc/UTC
 
 permalink: /:categories/:title/
 
+
 plugins:
   - jekyll-sitemap
   - jekyll-seo-tag
@@ -46,6 +47,9 @@ exclude:
 
 # Collections are like custom content types.
 collections:
+  pages:
+    output: true
+    permalink: /:path/
   guides:
     output: true
     permalink: /guide/:path/
@@ -76,10 +80,6 @@ defaults:
       type: "pages"
     values:
       layout: "default"
-      _add_options:
-        - name: Add Page
-          icon: page
-          href: "cloudcannon::editor/:collections_dir/.:extension🆕"
   -
     scope:
       type: "posts"
