Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -91,6 +91,7 @@ type:
 # -----------
 # CloudCannon
 
+uploads_dir: "uploads/:categories/:year/:month/:day/:title"
 
 # CloudCannon Explore UI Settings
 _explore:
