Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ topics:
   - 3D design
   - 3D printing  
   - Coding
-  - Design thinking
+  - Design 
   - Digital security
   - Electronic cutter
   - Electronics
