Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ exclude:
 collections:
   pages:
     output: true
-    permalink: /:path/
+    permalink: /:path
   guides:
     output: true
     permalink: /guide/:path/
