Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@
 - name: Community
   link: community
   subnav:
-    - name: Local organizations
-      link:
+    - name: Organizations
+      link: organizations
     - name: Stories
       link: stories
