--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,5 +23,5 @@
   subnav:
     - name: Organizations
       link: organizations
-    - name: Stories
-      link: stories
+    - name: CPL Maker Labs
+      link: locations
