Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,5 +23,5 @@
   subnav:
     - name: Organizations
       link: organizations
-    - name: Libary Makerspaces
+    - name: Other Library Makerspaces
       link: library-makerspaces
