--- a/_config.yml
+++ b/_config.yml
@@ -47,10 +47,11 @@ exclude:
 
 # Collections are like custom content types.
 collections:
-  site_pages:
+  pages:
     output: true
     permalink: /:path
-    _singular_name: Page   
+    _singular_name: Page 
+    _disable_add: false
   guides:
     output: true
     permalink: /guide/:path/
