--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ uploads_dir: "uploads/:title"
 # Here we define the option for "topics:" (plural) but in the guide frontmatter we use "topic:" (singular form)
 # The reason is because Cloudcannon convention shows a multiselect dropdown for "topics:" but only a single select dropdown for "topic:".
 # See: https://docs.cloudcannon.com/editing/interfaces/inputs/#general-inputs/select
-# @@TODO find out if this is also a Jekyll/Ruby convention...
+# TODO find out if this is also a Jekyll/Ruby convention...
 
 topics:
   - 2D design
