Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,19 @@ type:
   - how-to
   - video
 
+topics:
+  - 2D design
+  - 3D design
+  - 3D printing  
+  - Coding
+  - Digital security
+  - Electronic cutter
+  - Electronics
+  - Crafts
+  - Lasercutting
+  - CNC Milling
+  - Sewing
+
 # -----------
 # CloudCannon
 
