Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -98,10 +98,11 @@ topics:
   - CNC Milling
   - Sewing
 
+# In front matter, use difficulty: (singular form).
 difficulties:
-   1: easy
-   2: medium
-   3: hard
+  - easy
+  - medium
+  - hard
 
 
 # -----------
