Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -83,6 +83,14 @@ defaults:
       type: "guides"
     values:
       layout: "guide"
+  - scope:
+      type: "slidedecks"
+    values:
+      layout: "slidedeck"
+    _options:
+      content:
+        hidden: true
+
 
 type:
   - document
