Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -77,7 +77,7 @@ defaults:
     scope:
       type: "posts"
     values:
-      layout: "default"
+      layout: "blog"
       comments: false
   -
     scope:
