--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,19 @@ difficulties:
   Medium: 2 - Medium
   Hard: 3 - Hard
 
+# Slide deck (reveal.js themes)
+slide_themes:
+  - black
+  - white
+  - league
+  - beige
+  - sky
+  - night
+  - serif
+  - simple
+  - solarized
+  - blood
+  - moon
 
 # -----------
 # CloudCannon
@@ -148,6 +161,7 @@ _array_structures:
       value:
         title:
         content_markdown:
+        bg_color:
         
 uploads_dir: "uploads/:title"
 
