Updated '_data/navigation.yml' via CloudCannon

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,10 @@
     - name: How-To Guides
       link: /learn
       open_in_new_window: false
+    - name: Workshops
+      link: >-
+        https://chipublib.bibliocommons.com/events/search/fq=program:(53f20a07e04c1e3b1c00d3e4)
+      open_in_new_window: true
     - name: Slide Decks
       link: /slidedecks
       open_in_new_window: false
@@ -25,14 +29,6 @@
       open_in_new_window: false
     - name: Materials
       link: /materials
-      open_in_new_window: false
-- name: Events
-  link: >-
-    https://chipublib.bibliocommons.com/events/search/fq=program:(53f20a07e04c1e3b1c00d3e4)
-  open_in_new_window: true
-  subnav:
-    - name:
-      link:
       open_in_new_window: false
 - name: Community
   link: /community
