Updated '_config.yml' via CloudCannon

--- a/_config.yml
+++ b/_config.yml
@@ -163,6 +163,7 @@ _array_structures:
         title:
         content_markdown:
         background_color:
+        background_image:
         
 uploads_dir: "uploads/:title"
 
